# rust-raytracer

./: Cargo.toml  README.md
src/: bvh.rs  camera.rs  common.rs  foo.json  integrator.rs  light.rs  loader.rs  main.rs  material.rs  mesh.rs  object.rs  render.rs  scene.rs  texture.rs  util.rs  vec3.rs  world.rs
src/geom/: aggregate.rs  bvh.rs  common.rs  cuboid.rs  mesh.rs  mod.rs  sphere.rs  transform.rs  triangle.rs
src/loader/: mod.rs  ply.rs
src/math/: aabb.rs  mat3d.rs  mod.rs  quaternion.rs  ray.rs  vec3.rs  vec3d.rs
