[package]
name = "raytracer"
version = "0.1.0"
authors = ["stijnh <mail@stijnh.nl>"]
edition = "2018"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[dependencies]
image = "0.20.0"
indicatif = "0.11.0"
rayon = "1.0.2"
json = "0.11.13"
crunchy = "0.1.6"
rand = "0.6"
lazy_static = "1.2.0"
arrayvec = "*"
failure = "0.1.*"
delegate = "0.1.*"
